--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <hr size =2 noshade>
   <a href="MY ROLE.HTML">MY ROLES</a>
   <P><a href="CONTACT DETAILS.HTML"> CONTACT DETAILS </a></P>
-  <p><a href="cAREER.HTML"> CAREER PATH </a></P>
+  <p><a href="career.HTML"> CAREER PATH </a></P>
   <P><a href="SKILL.HTML">PERSONAL SKILL</a></P>
 
 </body>
