--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
   </ul>
   <hr size =2 noshade>
   <a href="MY ROLE.HTML">MY ROLES</a>
-  <P><a href="CONTACT DETAILS.HTML"> CONTACT DETAILS </a></P>
-  <p><a href="PATHE.HTML">CAREER PATH</a></P>
-  <P><a href="SKILL.HTML">PERSONAL SKILL</a></P>
+  <a href="CONTACT DETAILS.HTML"> CONTACT DETAILS </a>
+  <a href="PATHE.HTML">CAREER PATH</a>
+  <a href="SKILL.HTML">PERSONAL SKILL</a>
 
 </body>
 
