--- a/index.html
+++ b/index.html
@@ -40,10 +40,45 @@
     <LI><a href="https://www.axisbank.com/">15G/15H UPDATION</a></LI>
   
   </ul>
+
+<head>
+  <meta charset="utf-8">
+  <title>career path</title>
+</head>
+
+<body>
+  <h1>CAREER PATH</h1>
+  <table>
+    <tr>
+      <td><em><b><h2>YEAR</<h2></b></em> </td>
+      <td><em><b><h2>BANK</<h2></b></em> </td>
+    </tr>
+    <tr>
+        <td>2012-2014</td>
+        <td>Mahaveer Co-Op Urban Bank LTD</td>
+        </tr>
+    <tr>
+        <td>2014-2016</td>
+        <td>HDFC BANK LTD</td>
+    </tr>
+    <tr>
+      <td>2016-2021</td>
+      <td>YES BANK LTD</td>
+    </tr>
+<tr>
+  <td>2021-TILL DATE</td>
+  <td>AXIS BANK LTD</td>
+</tr>
+  </table>
+
+</body>
+
+</html>
+
+  
   <hr size =2 noshade>
   <a href="MY ROLE.HTML">MY ROLES</a>
   <a href="CONTACT DETAILS.HTML"> CONTACT DETAILS </a>
-  <a href="PATHE.HTML">CAREER PATH</a>
   <a href="SKILL.HTML">PERSONAL SKILL</a>
 
 </body>
