--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
   
   <hr size =2 noshade>
-  <a href="MY ROLE.HTML">MY ROLES</a>
-  <a href="CONTACT DETAILS.HTML"> CONTACT DETAILS </a>
-  <a href="SKILL.HTML">PERSONAL SKILL</a>
+  <a href="MY ROLE.HTML">MY ROLES</a><br>
+  <a href="CONTACT DETAILS.HTML"> CONTACT DETAILS </a><br>
+  <a href="SKILL.HTML">PERSONAL SKILL</a><br>
 
 </body>
 
