--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <body>
   <h1>CAREER PATH</h1>
-  <table>
+  <table cellspacing="10">
     <tr>
       <td><em><b><h2>YEAR</<h2></b></em> </td>
       <td><em><b><h2>BANK</<h2></b></em> </td>
