--- a/CONTACT DETAILS.HTML
+++ b/CONTACT DETAILS.HTML
@@ -17,7 +17,7 @@
     <input type="text" name="YOUR NAME" value=""><br>
     <label for="">YOUR EMAIL</label><br>
     <input type="email" name="YOUR E MAIL" value=""><br>
-    <label for="">YOUR MASSAGE</label><br>
+    <label for="">YOUR MESSAGE</label><br>
     <textarea name="name" rows="10" cols="40"></textarea><br>
     <input type="submit" name="">
   </form>
